--- a/awards.html
+++ b/awards.html
@@ -55,11 +55,11 @@
       <div class="starter-template">
           <h2>Awards</h2>
           <ul class="glyphicon glyphicon-list-alt">
+              <li>2021 R&D 100 Award (SZ compression framework), 2021.</li>
               <li>Best Paper Award, IEEE Cluster, 2018.</li>
               <li>Dissertation Year Program Fellowship, University of California, Riverside, 2018. </li>
               <li>Dean's Distinguished Fellowship, University of California, Riverside, 2014.</li>
           </ul>
-          </div>
       </div> 
       <div><hr></div>
       <div class="starter-template">
