--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>11/2021: I am serving as a Guest Editor of the special issue <a href="https://www.mdpi.com/journal/electronics/special_issues/new_trends_HPC">"New Trends for High-Performance Computing"</a> in <a href="https://www.mdpi.com/journal/electronics">Electronics</a>. Please consider making a submission!</li>
+          <li>10/2021: Our <a href="https://szcompressor.org">SZ compression software</a> has been selected for <a href="https://www.rdworldonline.com/rd-100-2021-winner/sz-a-lossy-compression-framework-for-scientific-data/">2021 R&D100 Awards</a>! </li>
+          <li>08/2021: Two papers have been accepted in Cluster'21.</li>
+          <li>07/2021: One paper has been accepted in TPDS-SS-Innovative R&D toward the Exascale Era.</li>
           <li>06/2021: Two papers have been accepted in SC'21.</li>
           <li>05/2021: One paper has been accepted in IEEE Transaction on Computers.</li>
           <li>01/2021: Starting at MS&T as a tenure-track assistant professor.</li>
