--- a/research.html
+++ b/research.html
@@ -130,13 +130,39 @@
         <h4 class="lead">Refereed Conference Publications</h4>
         <div class="row">
           <div class="col-md-2">
+            <h6>Cluster'21</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jinyang Liu, Sheng Di, Kai Zhao, Sian Jin, Dingwen Tao, <b>Xin Liang</b>, Zizhong Chen, Franck Cappello.<br>
+              Exploring Autoencoder-Based Error-Bounded Compression for Scien- tific Data.<br>
+              <I>Proceedings of the 2021 IEEE International Conference on Cluster Computing, Portland, OR, USA, September 7-10, 2021. Acceptance Rate: 29% (48/163)</I><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>Cluster'21</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jiannan Tian, Sheng Di, Xiaodong Yu, Cody Rivera, Kai Zhao, Sian Jin, Yunhe Feng, <b>Xin Liang</b>, Dingwen Tao, Franck Cappello.<br>
+              Optimizing Error-Bounded Lossy Compression for Scientific Data on GPUs.<br>
+              <I>Proceedings of the 2021 IEEE International Conference on Cluster Computing, Portland, OR, USA, September 7-10, 2021. Acceptance Rate: 29% (48/163)</I><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
             <h6>SC'21</h6>
           </div>
           <div class="col-md-10">
             <p>
               Sihuan Li, Sheng Di, Kai Zhao, <b>Xin Liang</b>, Zizhong Chen, and Franck Cappello.<br>
               Resilient Error-bounded Lossy compressor for Data Transfer.<br>
-              <I>To appear in the 33rd ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, Missouri, USA, Nov 14 - 19, 2021. Acceptance Rate: 23.6% (86/365)</I><br>
+              <I>Proceedings of the 33rd ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, Missouri, USA, Nov 14 - 19, 2021. Acceptance Rate: 23.6% (86/365)</I><br>
             </p>
           </div>
         </div>
@@ -148,7 +174,7 @@
             <p>
               <b>Xin Liang</b>, Qian Gong, Jieyang Chen, Ben Whitney, Lipeng Wan, Qing Liu, David Pugmire, Rick Archibald, Norbert Podhorszki, and Scott Klasky.<br>
               Error-controlled, Progressive, and Adaptable Retrieval of Scientific Data with Multilevel Decomposition.<br>
-              <I>To appear in the 33rd ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, Missouri, USA, Nov 14 - 19, 2021. Acceptance Rate: 23.6% (86/365)</I><br>
+              <I>Proceedings of the 33rd ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, Missouri, USA, Nov 14 - 19, 2021. Acceptance Rate: 23.6% (86/365)</I><br>
             </p>
           </div>
         </div>
@@ -522,6 +548,30 @@
         </div> 
           <div class="row">
             <div class="col-md-2">
+              <h6>TPDS-SS</h6>
+            </div>
+            <div class="col-md-10">
+              <p>
+                Lipeng Wan, Axel Huebl, Junmin Gu, Franz Poeschel, Ana Gainaru, Ruonan Wang, Jieyang Chen, <b>Xin Liang</b>, Dmitry Ganyushin, Todd Munson, Ian Foster, Jean-Luc Vay, Norbert Podhorszki, Kesheng Wu, and Scott Klasky.<br>
+                Improving I/O Performance for Exascale Applications through Online Data Layout Reorganization.<br>
+                <I>IEEE Transactions on Parallel and Distributed Systems Special Section on Innovative R&D toward the Exascale Era, 2021.</I><br>
+              </p>
+            </div>
+          </div> 
+          <div class="row">
+            <div class="col-md-2">
+              <h6>TVCG</h6>
+            </div>
+            <div class="col-md-10">
+              <p>
+                Hanqi Guo, David Lenz, Jiayi Xu, <b>Xin Liang</b>, Wenbin He, Iulian R. Grindeanu, Han-Wei Shen, Tom Peterka, Todd Munson, and Ian Foster.<br>
+                FTK: A Simplicial Spacetime Meshing Framework for Robust and Scalable Feature Tracking.<br>
+                <I>IEEE Transactions on Visualization and Computer Graphics, 2021.</I><br>
+              </p>
+            </div>
+          </div> 
+          <div class="row">
+            <div class="col-md-2">
               <h6>TPDS-SS-AI</h6>
             </div>
             <div class="col-md-10">
@@ -529,6 +579,18 @@
                 Kai Zhao, Sheng Di, Sihuan Li, <b>Xin Liang</b>, Yujia Zhai, Jieyang Chen, Kaiming Ouyang, Franck Cappello and Zizhong Chen.<br>
                 Algorithm-Based Fault Tolerance for Convolutional Neural Networks.<br>
                 <I>IEEE Transactions on Parallel and Distributed Systems Special Section on Parallel and Distributed Computing Techniques for AI, ML and DL, 2020.</I><br>
+              </p>
+            </div>
+          </div> 
+          <div class="row">
+            <div class="col-md-2">
+              <h6>IJHPCA</h6>
+            </div>
+            <div class="col-md-10">
+              <p>
+                Franck Cappello, Sheng Di, Sihuan Li, <b>Xin Liang</b>, Ali Murat Gok, Dingwen Tao, Chun Hong Yoon, Xin-Chuan Wu, Yuri Alexeev, and Frederic T Chong.<br>
+                Use Cases of Lossy Compression for Floating-Point Data in Scientific Data Sets.<br>
+                <I>The International Journal of High Performance Computing Applications, 2019.</I><br>
               </p>
             </div>
           </div> 
