--- a/services.html
+++ b/services.html
@@ -58,6 +58,7 @@
           <div class="starter-template">
           <h2>Program Committee</h2>
           <ul class="glyphicon glyphicon-list-alt">
+              <li>IEEE International Conference on Big Data (BigData)</li>
               <li>IEEE International Conference on High Performance Computing and Communications (HPCC)</li>
               <li>China Visualization and Visual Analytics Conference (ChinaVis)</li>
               <li>International Workshop on Data Reduction for Big Scientific Data (DRBSD)</li>
@@ -70,8 +71,11 @@
           <ul class="glyphicon glyphicon-list-alt">
               <li>IEEE Transactions on Parallel and Distributed Systems (TPDS)</li>
               <li>IEEE Transactions on Computers (TC)</li>
+              <li>IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD)</li>
+              <li>IEEE Transactions on Cloud Computing (TCC) </li>
               <li>The Journal of Systems Architecture: Embedded Software Design (JSA)</li>
               <li>Journal of Visualization (JV)</li>
+              <li>Knowledge and Information Systems (KAIS)</li>
           </ul>
           </div>
       <div><hr></div>
