--- a/teaching.html
+++ b/teaching.html
@@ -53,6 +53,14 @@
   <!-- <div class="jumbotron"> -->
       <div><hr></div>
       <div class="starter-template">
+          <h2>Instructor</h2>
+          <ul class="glyphicon glyphicon-list-alt">
+            <li>CS5200: Analysis of Algorithms, Missouri S&T, Rolla, August-December, 2021.</li>
+            <li>CS2500: Algorithms, Missouri S&T, Rolla, January-May, 2020.</li>
+          </ul>
+      </div>
+      <div><hr></div>
+      <div class="starter-template">
           <h2>Teaching Assistant</h2>
           <ul class="glyphicon glyphicon-list-alt">
               <li>CS150: Automata and Formal Languages, University of California, Riverside, Riverside, CA, April–June, 2016.</li>
@@ -62,8 +70,7 @@
               <li>CS010: Intro: CS for Sci, Math & Engr I, University of California, Riverside, Riverside, CA, October–December, 2015.</li>
               <li>CS008: Introduction to Computing, University of California, Riverside, Riverside, CA, October–December, 2015.</li>
           </ul>
-          </div>
-      </div> 
+      </div>
       <div><hr></div>
   <!-- </div> -->
 </main>
