--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <li>08/2021: Two papers have been accepted in Cluster'21.</li>
           <li>07/2021: One paper has been accepted in TPDS-SS-Innovative R&D toward the Exascale Era.</li>
           <li>06/2021: Two papers have been accepted in SC'21.</li>
-          <li>05/2021: One paper has been accepted in IEEE Transaction on Computers.</li>
-          <li>01/2021: Starting at MS&T as a tenure-track assistant professor.</li>
+          <li>05/2021: One paper has been accepted in IEEE Transactions on Computers.</li>
+          <li>01/2021: Starting at Missouri S&T as a tenure-track assistant professor.</li>
           <li>12/2020: Two papers have been accepted in IPDPS'21.</li>
           <li>10/2020: Our LDRD project (my role: PI) was funded by ORNL.</li>
           <li>09/2020: Our Sirius-2 project (my role: Senior Personnel) was funded by DOE ASCR.</li>
