--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div><hr></div>
 
       <div class="starter-template">
-        <h2>Selected Publications (<a href="research.html#publication">Full List</a>)</h2>
+        <h2>Selected Publications (<a href="research.html#publication">Full List</a>, <a href="https://scholar.google.com/citations?user=QRj1QroAAAAJ&hl=en">Google Scholar</a>)</h2>
         <div class="row">
           <div class="col-md-2">
             <h6>SC'21</h6>
