--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <p>
               <b>Xin Liang</b>, Qian Gong, Jieyang Chen, Ben Whitney, Lipeng Wan, Qing Liu, David Pugmire, Rick Archibald, Norbert Podhorszki, and Scott Klasky.<br>
               Error-controlled, Progressive, and Adaptable Retrieval of Scientific Data with Multilevel Decomposition.<br>
-              <I>To appear in the 33rd ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, Missouri, USA, Nov 14 - 19, 2021. Acceptance Rate: 23.6% (86/365)</I><br>
+              <I>Proceedings of the 33rd ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, St. Louis, Missouri, USA, Nov 14 - 19, 2021. Acceptance Rate: 23.6% (86/365)</I><br>
             </p>
           </div>
         </div>
@@ -151,7 +151,7 @@
             <p>
               <b>Xin Liang<sup>*</sup></b>, Ben Whitney<sup>*</sup>, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
               MGARD+: Optimizing Multilevel Methods for Error-bounded Scientific Data Reduction.<br>
-              <I>To appear in IEEE Transaction on Computers, 2021.</I> (*: Co-first authors)<br>
+              <I>IEEE Transaction on Computers, 2021.</I> (*: Co-first authors)<br>
             </p>
           </div>
         </div> 
