--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <p>
               <b>Xin Liang<sup>*</sup></b>, Ben Whitney<sup>*</sup>, Jieyang Chen, Lipeng Wan, Qing Liu, Dingwen Tao, James Kress, David Pugmire, Matthew Wolf, Norbert Podhorszki, and Scott Klasky.<br>
               MGARD+: Optimizing Multilevel Methods for Error-bounded Scientific Data Reduction.<br>
-              <I>IEEE Transaction on Computers, 2021.</I> (*: Co-first authors)<br>
+              <I>IEEE Transactions on Computers, 2021.</I> (*: Co-first authors)<br>
             </p>
           </div>
         </div> 
