--- a/awards.html
+++ b/awards.html
@@ -42,6 +42,7 @@
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark d-md-inline-block" href="index.html">Home</a>
     <a class="p-2 text-dark d-md-inline-block" href="research.html">Research</a>
+    <a class="p-2 text-dark d-md-inline-block" href="group.html">Group</a>
     <a class="p-2 text-dark d-md-inline-block" href="teaching.html">Teaching</a>
     <a class="p-2 text-dark d-md-inline-block" href="awards.html">Awards</a>
     <a class="p-2 text-dark d-md-inline-block" href="services.html">Services</a>
