--- a/research.html
+++ b/research.html
@@ -42,6 +42,7 @@
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark d-md-inline-block" href="index.html">Home</a>
     <a class="p-2 text-dark d-md-inline-block" href="research.html">Research</a>
+    <a class="p-2 text-dark d-md-inline-block" href="group.html">Group</a>
     <a class="p-2 text-dark d-md-inline-block" href="teaching.html">Teaching</a>
     <a class="p-2 text-dark d-md-inline-block" href="awards.html">Awards</a>
     <a class="p-2 text-dark d-md-inline-block" href="services.html">Services</a>
@@ -55,8 +56,27 @@
       <div class="starter-template">
         <h2><a id="project"></a>Projects</h2>
         <div><hr></div>
-        <h4 class="lead">Current</h4>
         <ul class="glyphicon glyphicon-list-alt">
+          <li><img src="feature_reg.png" class="float-right" style="height:120px;margin-right:40px">Improving Quality of Lossy Compression by Feature Regeneration
+            <ul class="glyphicon glyphicon-list-alt">
+                <li>Role: PI</li>
+                <li>Lead PI: Xin Liang</li>
+                <li>Sponsor: ANL</li>
+                <li>Amount: $69K</li>
+                <li>Period: 03/2020 - 08/2022</li>
+                <li>Project description: This project will focus on improving the compression quality of scientific lossy data compressors by exploring intelligent methods and parameter optimization strategies to regenerate feature and mitigate artifacts. The goal is to i) study new techniques to regenerate features and/or mitigate artifacts for scientific lossy data compressors; ii) integrate the methods to improve the compression quality of SZ using parameter optimizations; iii) evaluate and optimize the framework with ECP applications.</li>
+            </ul>
+          </li>
+          <li><img src="nek_fp.png" class="float-right" style="height:120px;margin-right:40px">CRII: OAC: Enabling Quantities-of-Interest Error Control for Trust-Driven Lossy Compression
+            <ul class="glyphicon glyphicon-list-alt">
+                <li>Role: PI</li>
+                <li>Lead PI: Xin Liang</li>
+                <li>Sponsor: NSF</li>
+                <li>Amount: $175K</li>
+                <li>Period: 06/2022 - 05/2024</li>
+                <li>Scientific simulations and instruments are producing data at volumes and velocities that overwhelm network and storage systems. Although error-controlled lossy compressors have been employed to mitigate these data issues, many scientists still feel reluctant to adopt them because these compressors provide no guarantee on the accuracy of downstream analysis results derived from raw data. This project aims to fill this gap by developing a trust-driven lossy data compression infrastructure capable of strictly controlling the errors in downstream analysis theoretically and practically to facilitate the use of data reduction in scientific applications. Success of this project will promote the progress of science in multiple disciplines via effective data reduction, and contribute to resolving important societal problems including electric generation, weather forecasting, material design, and transportation. Moreover, this project will contribute to the growth and development of future generations of scientists and engineers through educational and engagement activities, including development of new curriculum and recruitment of K-12 students.</li>
+            </ul>
+          </li>
           <li><img src="drd.png" class="float-right" style="height:120px;margin-right:40px">ESAMR: Enabling Scalable Analytics using Multi-precision Refactoring
             <ul class="glyphicon glyphicon-list-alt">
                 <li>Role: PI</li>
@@ -107,12 +127,7 @@
                 <li>Project description: Exascale architectures will have complex, heterogeneous memory hierarchies, ranging from node-level caches and main memory all the way to persistent storage via the file system, that applications need to effectively achieve their science goals. At the same time, exascale applications are becoming more complex in their data flows, from multiscale and multiphysics simulations that need to exchange data between separate codes to simulations that invoke data analysis and visualization services to extract information and render it to storing simulation output to the file system for later analysis. The ADIOS project delivers a highly optimized coupling infrastructure that enables efficient synchronous and asynchronous data exchanges to move data between multiple codes running concurrently and to the different layers of the storage system.</li>
             </ul>
           </li>
-        </ul>
-      </div>
-        <div><hr></div>
-        <h4 class="lead">Past</h4>
-        <ul class="glyphicon glyphicon-list-alt">
-            <li><img src="sz.jpg" class="float-right" style="height:120px;margin-right:60px"><a href="https://szcompressor.org">SZ: Fast, Effective, Parallel Error-bounded Exascale Lossy Compression For Scientific Data</a>
+          <li><img src="sz.jpg" class="float-right" style="height:120px;margin-right:60px"><a href="https://szcompressor.org">SZ: Fast, Effective, Parallel Error-bounded Exascale Lossy Compression For Scientific Data</a>
             <ul class="glyphicon glyphicon-list-alt">
                 <li>Role: Research Intern</li>
                 <li>Lead PI: Franck Cappello (ANL)</li>
@@ -122,6 +137,7 @@
             </ul>
           </li>
         </ul>
+      </div>
       <div><hr></div>
 
       <div class="starter-template">
@@ -534,7 +550,6 @@
 
       <div class="starter-template">
           <p class="lead">Refereed Journal Publications</p>
-        <div class="row">
           <div class="row">
             <div class="col-md-2">
               <h6>TPDS-SS</h6>
@@ -547,6 +562,7 @@
               </p>
             </div>
           </div>
+        <div class="row">
           <div class="col-md-2">
             <h6>TC</h6>
           </div>
