--- a/teaching.html
+++ b/teaching.html
@@ -42,6 +42,7 @@
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark d-md-inline-block" href="index.html">Home</a>
     <a class="p-2 text-dark d-md-inline-block" href="research.html">Research</a>
+    <a class="p-2 text-dark d-md-inline-block" href="group.html">Group</a>
     <a class="p-2 text-dark d-md-inline-block" href="teaching.html">Teaching</a>
     <a class="p-2 text-dark d-md-inline-block" href="awards.html">Awards</a>
     <a class="p-2 text-dark d-md-inline-block" href="services.html">Services</a>
@@ -55,6 +56,7 @@
       <div class="starter-template">
           <h2>Instructor</h2>
           <ul class="glyphicon glyphicon-list-alt">
+            <li>CS6001: High-performance Computing, Missouri S&T, Rolla, January-May, 2022.</li>
             <li>CS5200: Analysis of Algorithms, Missouri S&T, Rolla, August-December, 2021.</li>
             <li>CS2500: Algorithms, Missouri S&T, Rolla, January-May, 2021.</li>
           </ul>
