--- a/services.html
+++ b/services.html
@@ -42,6 +42,7 @@
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark d-md-inline-block" href="index.html">Home</a>
     <a class="p-2 text-dark d-md-inline-block" href="research.html">Research</a>
+    <a class="p-2 text-dark d-md-inline-block" href="group.html">Group</a>
     <a class="p-2 text-dark d-md-inline-block" href="teaching.html">Teaching</a>
     <a class="p-2 text-dark d-md-inline-block" href="awards.html">Awards</a>
     <a class="p-2 text-dark d-md-inline-block" href="services.html">Services</a>
@@ -58,6 +59,7 @@
           <div class="starter-template">
           <h2>Program Committee</h2>
           <ul class="glyphicon glyphicon-list-alt">
+              <li>ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis (SC)</li>
               <li>IEEE International Conference on Big Data (BigData)</li>
               <li>IEEE International Conference on High Performance Computing and Communications (HPCC)</li>
               <li>China Visualization and Visual Analytics Conference (ChinaVis)</li>
