--- a/group.html
+++ b/group.html
@@ -56,22 +56,24 @@
       <h2>Polaris Laboratory</h2>
       <div><hr></div>
       <div class="starter-template">
-          <h2>Mission</h2>
           <p align="left"> The mission of Performance Optimizations for LARge-scale Infrastructure and Systems (Polaris) Laboratory is to develop high-performance and scalable middleware for large-scale data management, storage, and analytics on cutting-edge computing systems, which will advance multiple domains including scientific simulations, big data analytics, artificial intelligence, and quantum computing. Driven by the actual needs from various science applications, research in the Polaris lab aims to address the perform issues raised by the big data challenges in real-world applications via deep collaborations with computational scientists. The research products are widely used in multiple DOE laboratories and will be validated on current and next-generation supercomputers including Summit, Aurora, and Frontier.
           </p>
       </div> 
       <div><hr></div>
+      <h2>Principal Investigator</h2>
+      <div><hr></div>
       <div class="starter-template">
-          <h2>Principal Investigator</h2>
-          <img src="me.jpg" class="float-right" style="height:100px;margin-right:10px">
+          <img src="me.jpg" class="float-right" style="height:150px;margin-right:10px">
           <h2 align="left"> Xin Liang</h2>
           <p align="left">Dr. Xin Liang is a tenure-track assistant professor with the Department of Computer Science at Missouri University of Science and Technology (Missouri S&T). He is affiliated with the <a href="https://hpc.mst.edu">Center for High-Performance Computing Research</a> and <a href="https://isc.mst.edu">Intelligent Systems Center</a>. He received his Ph.D. in Computer Science from University of California, Riverside in 2019. Prior to that, he received his B.S. in Computer Science from Peking University in 2014, with a minor in Math and Applied Math. Prior to joining Missouri S&T, he was a Computer/Data Scientist in the Workflow Systems Group at Oak Ridge National Laboratory (ORNL). Contact him at <a href="mailto:xliang@mst.edu">xliang@mst.edu</a>.
           </p>
       </div> 
       <div><hr></div>
+      <h2>Graduate Students</h2>
+      <div><hr></div>
       <div class="starter-template">
           <h2>Graduate Students</h2>
-          <img src="Pu.jpeg" class="float-right" style="height:100px;margin-right:10px">
+          <img src="Pu.jpeg" class="float-right" style="height:150px;margin-right:10px">
           <h2 align="left">Pu Jiao</h2>
           <p align="left">Mr. Pu Jiao earned a master’s degree from the Institute of Engineering Mechanics of China Earthquake Administration in 2019 and a bachelor’s degree from Xi’an Jiaotong University in 2016. Pu joined Polaris Lab in Spring 2022, and he is currently working on improving the compression quality of scientific lossy data compressors. His research interest includes high-performance computing and data mining. Contact him at <a href="mailto:pujiao@mst.edu">pujiao@mst.edu</a>.
           </p>
