--- a/group.html
+++ b/group.html
@@ -53,14 +53,20 @@
 <main role="main" class="container">
   <!-- <div class="jumbotron"> -->
       <div><hr></div>
-      <h2>Polaris Laboratory</h2>
+      <h2 align="center">Polaris Laboratory</h2>
       <div><hr></div>
       <div class="starter-template">
-          <p align="left"> The mission of Performance Optimizations for LARge-scale Infrastructure and Systems (Polaris) Laboratory is to develop high-performance and scalable middleware for large-scale data management, storage, and analytics on cutting-edge computing systems, which will advance multiple domains including scientific simulations, big data analytics, artificial intelligence, and quantum computing. Driven by the actual needs from various science applications, research in the Polaris lab aims to address the perform issues raised by the big data challenges in real-world applications via deep collaborations with computational scientists. The research products are widely used in multiple DOE laboratories and will be validated on current and next-generation supercomputers including Summit, Aurora, and Frontier.
-          </p>
+        <div class="row">
+          <div class="col-md-2"></div> 
+          <div class="col-md-8">
+              <p align="left"> The mission of Performance Optimizations for LARge-scale Infrastructure and Systems (Polaris) Laboratory is to develop high-performance and scalable middleware for large-scale data management, storage, and analytics on cutting-edge computing systems, which will advance multiple domains including scientific simulations, big data analytics, artificial intelligence, and quantum computing. Driven by the actual needs from various science applications, research in the Polaris lab aims to address the perform issues raised by the big data challenges in real-world applications via deep collaborations with computational scientists. The research products are widely used in multiple DOE laboratories and will be validated on current and next-generation supercomputers including Summit, Aurora, and Frontier.
+              </p>         
+          </div>
+          <div class="col-md-2"></div> 
+        </div>                    
       </div> 
       <div><hr></div>
-      <h2>Principal Investigator</h2>
+      <h2 align="center">Principal Investigator</h2>
       <div><hr></div>
       <div class="starter-template">
         <div class="row">
@@ -77,7 +83,7 @@
         </div>        
       </div> 
       <div><hr></div>
-      <h2>Graduate Students</h2>
+      <h2 align="center">Graduate Students</h2>
       <div><hr></div>
       <div class="starter-template">
         <div class="row">
