--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         <div class="col">
             <img src="me.jpg" class="float-right" style="height:300px;margin-right:10px">
           <h2 align="left"> Biography</h2>
-          <p align="left">Dr. Xin Liang is a tenure-track assistant professor with the <a href="https://cs.mst.edu">Department of Computer Science</a> at <a href="https://www.mst.edu">Missouri University of Science and Technology (Missouri S&T)</a>. He received his Ph.D. in Computer Science from <a href="https://www.ucr.edu">University of California, Riverside</a> in 2019. Prior to that, he received his B.S. in Computer Science from <a href="https://www.pku.edu.cn">Peking University</a> in 2014, with a minor in Math and Applied Math. During his Ph.D. studies, he worked as student interns in the Extreme Scale Resilience Group and the Parallel Extreme-Scale Data Analytics Team at <a href="https://www.anl.gov/">Argonne National Laboratory (ANL)</a>, the Scalable Machine Learning Group at <a href="https://www.pnnl.gov/">Pacific Northwest National Laboratory (PNNL)</a>, and the Data Science at Scale Team at <a href="http://www.lanl.gov/">Los Alamos National Laboratory (LANL)</a>. Prior to joining Missouri S&T, he was a Computer/Data Scientist in the Workflow Systems Group at <a href="https://www.ornl.gov">Oak Ridge National Laboratory (ORNL)</a>.</p>
+          <p align="left">Dr. Xin Liang is a tenure-track assistant professor with the <a href="https://www.engr.uky.edu/research-faculty/departments/computer-science">Department of Computer Science</a> at <a href="https://www.uky.edu">University of Kentucky (UKY)</a>. He received his Ph.D. in Computer Science from <a href="https://www.ucr.edu">University of California, Riverside</a> in 2019. Prior to that, he received his B.S. in Computer Science from <a href="https://www.pku.edu.cn">Peking University</a> in 2014, with a minor in Math and Applied Math. During his Ph.D. studies, he worked as student interns in the Extreme Scale Resilience Group and the Parallel Extreme-Scale Data Analytics Team at <a href="https://www.anl.gov/">Argonne National Laboratory (ANL)</a>, the Scalable Machine Learning Group at <a href="https://www.pnnl.gov/">Pacific Northwest National Laboratory (PNNL)</a>, and the Data Science at Scale Team at <a href="http://www.lanl.gov/">Los Alamos National Laboratory (LANL)</a>. Prior to joining UKY, he worked as an assistant professor at <a href="https://www.mst.edu">Missouri University of Science and Technology</a> and Computer/Data Scientist in the Workflow Systems Group at <a href="https://www.ornl.gov">Oak Ridge National Laboratory (ORNL)</a>.</p>
           <p align="left">Dr. Liang's research interests lie broadly in the areas of high-performance computing, parallel and distributed systems, scientific data management, large-scale data analytics, and distributed machine learning. He has published in many highly competitive conferences and journals such as IEEE/ACM SC, ACM HPDC, ACM PPoPP, ACM ICS, IEEE IPDPS, ACM PACT, IEEE BigData, IEEE Cluster, IEEE TPDS etc. He has received <I>Dissertation Year Fellowship (DYP)</I> from UCR and <I>Best Paper Award</I> from IEEE Cluster 2018. While working at ORNL, he led the ESAMR project funded by the <I>Director's Research and Development (DRD)</I> program as principle investigator. He is one of the key developers of SZ and major contributors of MGARD, which are two widely used data reduction software in the scientific computing community. More details about Dr. Liang can be found in his <a href="cv.pdf" target="_blank" data-content="cv.pdf" data-type="external" rel="undefined">CV</a></span>.</p>
 
-          <p align="left"><b>Dr. Liang will join the <a href="https://www.engr.uky.edu/research-faculty/departments/computer-science">Department of Computer Science</a> at <a href="https://www.uky.edu">University of Kentucky</a> in the Fall and he is actively looking for self-motivated students to work on high-performance computing, scientific data management, and big data analytics. If you're interested in his research, please contact him at <a href="mailto:xliang@mst.edu">xliang@mst.edu</a>.</b></p>
+          <p align="left"><b>Dr. Liang is always looking for self-motivated students to work on high-performance computing, scientific data management, and big data analytics. If you're interested in his research, please contact him at <a href="mailto:xliang@uky.edu">xliang@uky.edu</a>.</b></p>
         </div>
       </div>
 
@@ -84,15 +84,19 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
-          <li>03/2022: A 69k project for "Improving Quality of Lossy Compression by Feature Regeneration" is sub-awarded by Argonne National Lab (my role: PI). Thanks a lot to ANL!</li>
+          <li>08/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2230098&HistoricalAwards=false">CyberTraining project</a> was awarded by the National Science Foundation (my role: site PI). Thanks a lot to NSF!</li>
+          <li>08/2022: One paper has been accepted in IEEE Transactions on Big Data.</li>
+          <li>06/2022: One paper has been accepted in SC'22.</li>
+          <li>05/2022: One paper has been accepted in SSDBM'22.</li>
+          <li>04/2022: One paper has been accepted in HPDC'22.</li>
           <li>02/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2153451&HistoricalAwards=false">CRII project</a> was awarded by the National Science Foundation (my role: PI). Thanks a lot to NSF!</li>
+          <li>11/2021: One paper has been accepted in ICDE'22.</li>
           <li>11/2021: I am serving as a Guest Editor of the special issue <a href="https://www.mdpi.com/journal/electronics/special_issues/new_trends_HPC">"New Trends for High-Performance Computing"</a> in <a href="https://www.mdpi.com/journal/electronics">Electronics</a>. Please consider making a submission!</li>
           <li>10/2021: Our <a href="https://szcompressor.org">SZ compression software</a> has been selected for <a href="https://www.rdworldonline.com/rd-100-2021-winner/sz-a-lossy-compression-framework-for-scientific-data/">2021 R&D100 Awards</a>! </li>
           <li>08/2021: Two papers have been accepted in Cluster'21.</li>
           <li>07/2021: One paper has been accepted in TPDS-SS-Innovative R&D toward the Exascale Era.</li>
           <li>06/2021: Two papers have been accepted in SC'21.</li>
           <li>05/2021: One paper has been accepted in IEEE Transactions on Computers.</li>
-          <li>01/2021: Starting at Missouri S&T as a tenure-track assistant professor.</li>
           <li>12/2020: Two papers have been accepted in IPDPS'21.</li>
           <li>10/2020: Our LDRD project (my role: PI) was funded by ORNL.</li>
           <li>09/2020: Our Sirius-2 project (my role: Senior Personnel) was funded by DOE ASCR.</li>
@@ -101,7 +105,6 @@
           <li>08/2020: One paper has been accepted in Cluster'20.</li>
           <li>07/2020: One paper has been accepted in PACT'20.</li>
           <li>03/2020: One paper has been accepted in HPDC'20.</li>
-          <li>03/2020: Starting at ORNL as a Computer/Data Scientitst.</li>
           <li>01/2020: One paper has been accepted in PacificVis'20.</li>
         </ul>
       </div>
@@ -134,6 +137,18 @@
 
       <div class="starter-template">
         <h2>Selected Publications (<a href="research.html#publication">Full List</a>, <a href="https://scholar.google.com/citations?user=QRj1QroAAAAJ&hl=en">Google Scholar</a>)</h2>
+        <div class="row">
+          <div class="col-md-2">
+            <h6>TBD</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <b>Xin Liang<sup>*</sup></b>, Kai Zhao<sup>*</sup>, Sheng Di, Sihuan Li, Robert Underwood, Ali M. Gok, Jiannan Tian, Junjing Deng, Jon C. Calhoun, Dingwen Tao, Zizhong Chen, and Franck Cappello.<br>
+              SZ3: A Modular Framework for Composing Prediction-based Error-bounded Lossy Compressors.<br>
+              <I>IEEE Transactions on Big Data, 2022.</I> (*: Co-first authors)<br>
+            </p>
+          </div>
+        </div> 
         <div class="row">
           <div class="col-md-2">
             <h6>SC'21</h6>
