--- a/research.html
+++ b/research.html
@@ -144,14 +144,67 @@
         <h2><a id="publication"></a>Publications</h2>
         <div><hr></div>
         <h4 class="lead">Refereed Conference Publications</h4>
+
         <div class="row">
+          <div class="col-md-2">
+            <h6>SC'22</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Jinyang Liu, Sheng Di, Kai Zhao, <b>Xin Liang</b>, Zizhong Chen, and Franck Cappello.<br>
+              Dynamic Quality Metric Oriented Error Bounded Lossy Compression for Scientific Datasets.<br>
+              <I>Proceedings of the 34th ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis, Dallas, TX, USA, Nov 13 - 18, 2022.</I><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>SSDBM'22</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Qian Gong, Ben Whitney, Chengzhu Zhang, <b>Xin Liang</b>, Anand Rangarajan, Jieyang Chen, Lipeng Wan, Paul Ullrich, Qing Liu, Robert Jacob, Sanjay Ranka, and Scott Klasky.<br>
+              Region-adaptive, Error-controlled Scientific Data Compression using Multilevel Decomposition.<br>
+              <I>Proceedings of the 34th International Conference on Scientific and Statistical Database Management, Copenhagen, Denmark, July 6-8, 2022.</I><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>HPDC'22</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Xiaodong Yu, Sheng Di, Kai Zhao, Jiannan Tian, Dingwen Tao, <b>Xin Liang</b>, and Franck Cappello.<br>
+              Ultra-fast Error-bounded Lossy Compression for Scientific Dataset.<br>
+              <I>Proceedings of the 31st ACM International Symposium on High-Performance Parallel and Distributed Computing, Minneapolis, MN, June 27-July 1, 2022.</I><br>
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2">
+            <h6>ICDE'22</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Kai Zhao, Sheng Di, Danny Perez, <b>Xin Liang</b>, Zizhong Chen, and Franck Cappello.<br>
+              MDZ: An Efficient Error-bounded Lossy Compressor for Molecular Dynamics.<br>
+              <I>Proceedings of the 38th IEEE International Conference on Data Engineering, Virtual, May 9 - 12, 2022.</I><br>
+            </p>
+          </div>
+        </div>
+
+
           <div class="col-md-2">
             <h6>Cluster'21</h6>
           </div>
           <div class="col-md-10">
             <p>
               Jinyang Liu, Sheng Di, Kai Zhao, Sian Jin, Dingwen Tao, <b>Xin Liang</b>, Zizhong Chen, Franck Cappello.<br>
-              Exploring Autoencoder-Based Error-Bounded Compression for Scien- tific Data.<br>
+              Exploring Autoencoder-Based Error-Bounded Compression for Scientific Data.<br>
               <I>Proceedings of the 2021 IEEE International Conference on Cluster Computing, Portland, OR, USA, September 7-10, 2021. Acceptance Rate: 29% (48/163)</I><br>
             </p>
           </div>
@@ -550,6 +603,19 @@
 
       <div class="starter-template">
           <p class="lead">Refereed Journal Publications</p>
+            <div class="row">
+              <div class="col-md-2">
+                <h6>TBD</h6>
+              </div>
+              <div class="col-md-10">
+                <p>
+                  <b>Xin Liang<sup>*</sup></b>, Kai Zhao<sup>*</sup>, Sheng Di, Sihuan Li, Robert Underwood, Ali M. Gok, Jiannan Tian, Junjing Deng, Jon C. Calhoun, Dingwen Tao, Zizhong Chen, and Franck Cappello.<br>
+                  SZ3: A Modular Framework for Composing Prediction-based Error-bounded Lossy Compressors.<br>
+                  <I>IEEE Transactions on Big Data, 2022.</I> (*: Co-first authors)<br>
+                </p>
+              </div>
+            </div> 
+
           <div class="row">
             <div class="col-md-2">
               <h6>TPDS-SS</h6>
