--- a/research.html
+++ b/research.html
@@ -197,7 +197,7 @@
           </div>
         </div>
 
-
+        <div class="row">
           <div class="col-md-2">
             <h6>Cluster'21</h6>
           </div>
