--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
           <br/>
           <h3 class="lead">Assistant Professor<br/>
           Department of Computer Science<br/>
-          Missouri University of Science and Technology</h3>
+          University of Kentucky</h3>
           <br/>
-          <h4 class="lead">Office: 333 Computer Science Bldg.<br/>
-          Email: xliang@mst.edu<br/>
-          Tel: (573)341-4491</h4>
+          <h4 class="lead">Office: 227 James F. Hardymon Bldg.<br/>
+          Email: xliang@uky.edu<br/>
+          Tel: (859)257-8029</h4>
           <br/>
         </div>  
 
