--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@
   </head>
   <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto font-weight-normal"><img src="mst.png" width="100" fill="none" alt="Missouri University of Science and Technology" href="https://www.mst.edu"/></h5>
+  <h5 class="my-0 mr-md-auto font-weight-normal"><img src="uk-lockup.png" width="100" fill="none" alt="University of Kentucky" href="https://www.uky.edu"/></h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark d-md-inline-block" href="index.html">Home</a>
     <a class="p-2 text-dark d-md-inline-block" href="research.html">Research</a>
@@ -573,6 +573,18 @@
       <div><hr></div>
       <div class="starter-template">
         <p class="lead">Refereed Workshop Publications</p>
+        <div class="row">
+          <div class="col-md-2">
+            <h6>IPDPSW</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              Avah Banerjee, <b>Xin Liang</b>, and Rod Tohid.<br>
+              Locality-aware Qubit Routing for the Grid Architecture.<br>
+              <I>Proceedings of IPDPS Workshops, Lyon, France, May 30 - June 3, 2022.</I><br>
+            </p>
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-2">
             <h6>DRBSD-4</h6>
