--- a/group.html
+++ b/group.html
@@ -98,6 +98,18 @@
           </div> 
           <div class="col-md-2"></div> 
         </div>                  
+        <div class="row">
+          <div class="col-md-2"></div> 
+          <div class="col-md-6">
+              <h2 align="left">Mingze Xia</h2>
+              <p align="left">Mr. Mingze Xia joined Polaris Lab in Fall 2022. He received his B.Math(Hons) in Statistics from the University of Waterloo in 2017 and Master’s degree in Data Science from The University of Melbourne in 2019. Previously, he worked at Duke Kunshan University as an Research Fellow and Huawei from 2020 to 2022 as a Data Scientist. His research interests focus on lossy compression, deep learning, and data mining. Contact him at <a href="mailto:mingze.xia@uky.edu">mingze.xia@uky.edu</a>.
+              </p>         
+          </div>
+          <div class="col-md-2">
+              <img src="Mingze.jpg" class="float-right" style="height:200px;margin-right:10px">
+          </div> 
+          <div class="col-md-2"></div> 
+        </div>                  
       </div> 
       <div><hr></div>
   <!-- </div> -->
