--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <div class="starter-template">
         <h2>Latest News</h2>
         <ul class="glyphicon glyphicon-list-alt">
+          <li>10/2022: One paper has been accepted in IEEE Transactions on Visualization and Computer Graphics.</li>
           <li>08/2022: Our <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2230098&HistoricalAwards=false">CyberTraining project</a> was awarded by the National Science Foundation (my role: site PI). Thanks a lot to NSF!</li>
           <li>08/2022: One paper has been accepted in IEEE Transactions on Big Data.</li>
           <li>06/2022: One paper has been accepted in SC'22.</li>
@@ -137,6 +138,18 @@
 
       <div class="starter-template">
         <h2>Selected Publications (<a href="research.html#publication">Full List</a>, <a href="https://scholar.google.com/citations?user=QRj1QroAAAAJ&hl=en">Google Scholar</a>)</h2>
+        <div class="row">
+          <div class="col-md-2">
+            <h6>TVCG</h6>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <b>Xin Liang<sup>*</sup></b>, Kai Zhao<sup>*</sup>, Sheng Di, Sihuan Li, Robert Underwood, Ali M. Gok, Jiannan Tian, Junjing Deng, Jon C. Calhoun, Dingwen Tao, Zizhong Chen, and Franck Cappello.<br>
+              Toward Feature-Preserving Vector Field Compression.<br>
+              <I>IEEE Transactions on Visualization and Computer Graphics, 2022.</I> <br>
+            </p>
+          </div>
+        </div> 
         <div class="row">
           <div class="col-md-2">
             <h6>TBD</h6>
