--- a/research.html
+++ b/research.html
@@ -617,6 +617,18 @@
           <p class="lead">Refereed Journal Publications</p>
             <div class="row">
               <div class="col-md-2">
+                <h6>TVCG</h6>
+              </div>
+              <div class="col-md-10">
+                <p>
+                  <b>Xin Liang</b>, Sheng Di, Franck Cappello, Mukund Raj, Chunhui Liu, Kenji Ono, Zizhong Chen, Tom Peterka, and Hanqi Guo.<br>
+                  Toward Feature-Preserving Vector Field Compression.<br>
+                  <I>IEEE Transactions on Visualization and Computer Graphics, 2022.</I> <br>
+                </p>
+              </div>
+            </div> 
+            <div class="row">
+              <div class="col-md-2">
                 <h6>TBD</h6>
               </div>
               <div class="col-md-10">
