--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
           <div class="col-md-10">
             <p>
-              <b>Xin Liang<sup>*</sup></b>, Kai Zhao<sup>*</sup>, Sheng Di, Sihuan Li, Robert Underwood, Ali M. Gok, Jiannan Tian, Junjing Deng, Jon C. Calhoun, Dingwen Tao, Zizhong Chen, and Franck Cappello.<br>
+              <b>Xin Liang</b>, Sheng Di, Franck Cappello, Mukund Raj, Chunhui Liu, Kenji Ono, Zizhong Chen, Tom Peterka, and Hanqi Guo.<br>
               Toward Feature-Preserving Vector Field Compression.<br>
               <I>IEEE Transactions on Visualization and Computer Graphics, 2022.</I> <br>
             </p>
